--- a/backend/package.json
+++ b/backend/package.json
@@ -7,12 +7,8 @@
     "dev": "nodemon src/server.js",
     "start": "node src/server.js",
     "seed": "node prisma/seed.js",
-    "test": "set NODE_OPTIONS=--experimental-vm-modules && jest --runInBand"
+    "test": "cross-env NODE_ENV=test NODE_OPTIONS=--experimental-vm-modules jest --runInBand"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
   "dependencies": {
     "@prisma/client": "^6.13.0",
     "bcrypt": "^6.0.0",
@@ -26,6 +22,7 @@
     "zod": "^4.0.14"
   },
   "devDependencies": {
+    "cross-env": "^7.0.3",
     "jest": "^30.0.5",
     "nodemon": "^3.1.10",
     "supertest": "^7.1.4"
