--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
   "dependencies": {
-    "cors": "^2.8.5"
+    "cors": "^2.8.5",
+    "lucide-react": "^0.544.0",
+    "react-hot-toast": "^2.6.0"
   }
 }
